--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "files.associations": {
+        "*.html": "html",
         "inttypes.h": "c",
         "process.h": "c",
         "*.inc": "c",
-        "syscall.h": "c"
-    }
+        "syscall.h": "c",
+        "bitmap.h": "c"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
