--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "process.h": "c",
         "*.inc": "c",
         "syscall.h": "c",
-        "bitmap.h": "c"
+        "bitmap.h": "c",
+        "fat.h": "c",
+        "disk.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
